fixed errors due to new jda version